# Motmot-RPi4-SLAM

./: CMakeLists.txt  ChangeLog.md  ReadMe.md  build.sh  main.cpp
Examples/Monocular/: mono_euroc.cc  mono_tum_vi.cc
Examples_old/Monocular-Inertial/: mono_inertial_tum_vi.cc
Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt
Examples_old/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
include/: cameraManager.hpp  imuManager.hpp  motmotCore.hpp  orbSlamManager.hpp
src/: LoopClosing.cc  cameraManager.cpp  imuManager.cpp  motmotCore.cpp  orbSlamManager.cpp
zeroMQ/cam_client/: CMakeLists.txt  main.cpp
zeroMQ/cam_server/: CMakeLists.txt  main.cpp
